# sirna-offtarget-analysis-harness

./: .gitignore  Dockerfile  LATEST.md  LICENSE  README.md  archive_checksum_placeholder_scan_report.json  legacy_code_static_scan_report.json  portfolio_integrity_report.md  portfolio_scientific_preservation.json  post_package_verification.json  pyproject.toml  release_coverage_evidence.json  release_manifest.json  release_source_tree_inventory.json
.github/workflows/: ci.yml
docs/: algorithm_boundary_after_expression_canonical_v2.md  algorithm_boundary_after_expression_v2.md  annotation_membership_completeness.md  annotation_membership_snapshots.md  architecture.md  architecture_current_and_planned.dot  architecture_current_and_planned.md  artifact_handoff.md  assumptions_and_limitations.md  biological_problem.md  complete_annotation_memberships.md  config_history.md  config_revision_reuse.md  consensus_layers.md  contextual_conflict_classification.md  contract_payloads.md  coverage_policy.md  current_vs_planned.md  custom_harness_design.md  dependency_consumption.md  dependency_dag.md  dependency_types.md  edge_consensus.md  entity_model_v2.md  entity_registry_runtime.md  equal_prior_m_over_n_consistency.md  equal_transcript_prior.md  evidence_quality.md  evidence_quality_components_v2.md  expected_direct_effect_contracts.md  expression_artifact_canonicality.md  expression_backends.md  expression_branch_coverage_gap_inventory.md  expression_committed_artifact_boundary.md  expression_contracts_v2.md  expression_contrast_v2.md  expression_downstream_consumer_inventory.md  expression_downstream_transition.md  expression_downstream_v2_transition.md  expression_execution_support_matrix.md  (+155 more)
docs/algorithm_comparison/: expression_normalization_comparison.md  expression_normalization_decision.md  expression_normalization_limitations.md
docs/algorithm_recovery/: expression_normalization_original_requirements.md
examples/portfolio/: README.md  annotation.gtf  config.yaml  counts.tsv  identifier_resources.tsv  pathway_network.tsv  portfolio_result_summary.md  portfolio_result_summary.tsv  regulons.tsv  sample_metadata.tsv  sirna_guide.tsv  transcripts.fasta
examples/synthetic/: annotation.gtf  config.yaml  config_late.yaml  counts.tsv  expected_truth.json  pathway_network.tsv  regulons.tsv  transcripts.fasta
resources/pathway_cache/: manifest.json
schemas/stages/: ExpressionAnalysisResultV1.schema.json  ExpressionAnalysisResultV2.schema.json  IdentifierMappingResultV1.schema.json  IsoformAnalysisResultV1.schema.json  MechanisticNetworkResultV1.schema.json  PathwayEnrichmentResultV1.schema.json  PreparedInputsResultV1.schema.json  SequenceAnalysisResultV1.schema.json  ValidationResultV1.schema.json
scripts/: check_coverage_thresholds.py  compare_reproducible_outputs.py  generate_portfolio_summary.py  release_evidence.py  release_source_tree.py  verify_release_archive.py
src/sirna_offtarget/: __init__.py  cli.py  config.py  models.py
tests/: conftest.py
tests/architecture/: test_clean_imports.py  test_dependency_rules.py  test_expected_direct_effect_boundaries.py  test_expression_normalization_boundary.py  test_final_evidence_classification_boundaries.py  test_isoform_artifact_finalization_boundaries.py  test_isoform_uncertainty_boundaries.py  test_no_cycles.py  test_no_hidden_network_access.py  test_no_import_side_effects.py  test_no_reserved_branding.py  test_path_search_contracts.py  test_plugin_isolation.py  test_residual_attribution_boundaries.py  test_scientific_logic_boundaries.py  test_secondary_evidence_integration_boundaries.py  test_synthetic_provider_is_test_only.py  test_transcript_targetability_boundaries.py  test_transcript_targetability_ratio_boundaries.py
tests/fixtures/: annotation_memberships.tsv  identifier_resource.tsv
tests/integration/: test_corrected_transcript_targetability_pipeline.py  test_expected_direct_effect_pipeline.py  test_final_evidence_classification_pipeline.py  test_isoform_and_targetability_to_ratio_pipeline.py  test_isoform_uncertainty_artifact_finalization_pipeline.py  test_isoform_uncertainty_workflow_stage.py  test_partial_run_verification.py  test_release_evidence_pipeline.py  test_residual_attribution_pipeline.py  test_resume_after_pathway_failure.py  (+3 more)
(+370 files in other folders)
